--- a/style/flowers.css
+++ b/style/flowers.css
@@ -1,47 +1,53 @@
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
 :root {
   --dark-color: #051a26;
 }
 
+
+/* Cuerpo | Body */
 body {
   display: flex;
   align-items: flex-end;
   justify-content: center;
   min-height: 100vh;
-  background-color: var(--dark-color);
+  background-color: #051a26;
   overflow: hidden;
   perspective: 1000px;
 }
 
+
+/*Estrellas | Stars*/
 .night {
   position: fixed;
-  left: 50%;
-  top: 0;
-  transform: translateX(-50%);
   width: 100%;
   height: 100%;
-  filter: blur(0.1vmin);
-  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), 
-  radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)), 
+  background-image: radial-gradient(ellipse at top, transparent 0%, #051a26), 
+  radial-gradient(ellipse at bottom, #051a26, rgba(145, 233, 255, 0.2)), 
   repeating-linear-gradient(220deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, 
   transparent 22px), repeating-linear-gradient(189deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, 
   transparent 19px, transparent 22px), repeating-linear-gradient(148deg, rgb(0, 0, 0) 0px, 
-  rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), linear-gradient(90deg, rgb(21, 255, 0), 
+  rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), linear-gradient(90deg, #c8f1eb, 
   rgb(240, 240, 240));
 }
 
+/*Contenedor de las Flores | Container of the flowers*/
 .flowers {
   position: relative;
-  transform: scale(0.9);
 }
 
+@media screen and (max-width: 500px){
+  .flowers {
+    margin: 50% auto;
+  }
+  
+}
+
+
+/*Flores | Flowers*/
 .flower {
   position: absolute;
   bottom: 10vmin;
@@ -49,109 +55,140 @@ body {
   z-index: 10;
   --fl-speed: 0.8s;
 }
+
+
+/*Flor 1 | Flower 1*/
 .flower--1 {
   -webkit-animation: moving-flower-1 4s linear infinite;
           animation: moving-flower-1 4s linear infinite;
 }
+
 .flower--1 .flower__line {
   height: 70vmin;
   -webkit-animation-delay: 0.3s;
           animation-delay: 0.3s;
 }
+
 .flower--1 .flower__line__leaf--1 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 1.6s backwards;
           animation: blooming-leaf-right var(--fl-speed) 1.6s backwards;
 }
+
 .flower--1 .flower__line__leaf--2 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 1.4s backwards;
           animation: blooming-leaf-right var(--fl-speed) 1.4s backwards;
 }
+
 .flower--1 .flower__line__leaf--3 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 1.2s backwards;
           animation: blooming-leaf-left var(--fl-speed) 1.2s backwards;
 }
+
 .flower--1 .flower__line__leaf--4 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 1s backwards;
           animation: blooming-leaf-left var(--fl-speed) 1s backwards;
 }
+
 .flower--1 .flower__line__leaf--5 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 1.8s backwards;
           animation: blooming-leaf-right var(--fl-speed) 1.8s backwards;
 }
+
 .flower--1 .flower__line__leaf--6 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 2s backwards;
           animation: blooming-leaf-left var(--fl-speed) 2s backwards;
 }
+
 .flower--2 {
   left: 50%;
   transform: rotate(20deg);
   -webkit-animation: moving-flower-2 4s linear infinite;
           animation: moving-flower-2 4s linear infinite;
 }
+
 .flower--2 .flower__line {
   height: 60vmin;
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
 }
+
 .flower--2 .flower__line__leaf--1 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 1.9s backwards;
           animation: blooming-leaf-right var(--fl-speed) 1.9s backwards;
 }
+
 .flower--2 .flower__line__leaf--2 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 1.7s backwards;
           animation: blooming-leaf-right var(--fl-speed) 1.7s backwards;
 }
+
 .flower--2 .flower__line__leaf--3 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 1.5s backwards;
           animation: blooming-leaf-left var(--fl-speed) 1.5s backwards;
 }
+
 .flower--2 .flower__line__leaf--4 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 1.3s backwards;
           animation: blooming-leaf-left var(--fl-speed) 1.3s backwards;
 }
+
+
+/*Flor 3 | Flower 3*/
 .flower--3 {
   left: 50%;
   transform: rotate(-15deg);
   -webkit-animation: moving-flower-3 4s linear infinite;
           animation: moving-flower-3 4s linear infinite;
 }
+
 .flower--3 .flower__line {
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
 }
+
 .flower--3 .flower__line__leaf--1 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 2.5s backwards;
           animation: blooming-leaf-right var(--fl-speed) 2.5s backwards;
 }
+
 .flower--3 .flower__line__leaf--2 {
   -webkit-animation: blooming-leaf-right var(--fl-speed) 2.3s backwards;
           animation: blooming-leaf-right var(--fl-speed) 2.3s backwards;
 }
+
 .flower--3 .flower__line__leaf--3 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 2.1s backwards;
           animation: blooming-leaf-left var(--fl-speed) 2.1s backwards;
 }
+
 .flower--3 .flower__line__leaf--4 {
   -webkit-animation: blooming-leaf-left var(--fl-speed) 1.9s backwards;
           animation: blooming-leaf-left var(--fl-speed) 1.9s backwards;
 }
+
+/* Petalos | Petals */ 
 .flower__leafs {
   position: relative;
   -webkit-animation: blooming-flower 2s backwards;
           animation: blooming-flower 2s backwards;
 }
+
 .flower__leafs--1 {
   -webkit-animation-delay: 1.1s;
           animation-delay: 1.1s;
 }
+
 .flower__leafs--2 {
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
+
 .flower__leafs--3 {
   -webkit-animation-delay: 1.7s;
           animation-delay: 1.7s;
 }
+
+/* Brillo de los petalos | Brightness of the petals */
 .flower__leafs::after {
   content: "";
   position: absolute;
@@ -160,9 +197,10 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #1aaa15;
+  background-color: #c8f1eb;
   filter: blur(10vmin);
 }
+
 .flower__leaf {
   position: absolute;
   bottom: 0;
@@ -176,15 +214,19 @@ body {
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
 }
+
 .flower__leaf--1 {
   transform: translate(-10%, 1%) rotateY(40deg) rotateX(-50deg);
 }
+
 .flower__leaf--2 {
   transform: translate(-50%, -4%) rotateX(40deg);
 }
+
 .flower__leaf--3 {
   transform: translate(-90%, 0%) rotateY(45deg) rotateX(50deg);
 }
+
 .flower__leaf--4 {
   width: 8vmin;
   height: 8vmin;
@@ -195,6 +237,7 @@ body {
   z-index: 1;
   opacity: 0.8;
 }
+
 .flower__white-circle {
   position: absolute;
   left: -3.5vmin;
@@ -204,6 +247,7 @@ body {
   border-radius: 50%;
   background-color: #ffffff;
 }
+
 .flower__white-circle::after {
   content: "";
   position: absolute;
@@ -235,6 +279,7 @@ body {
   repeating-linear-gradient(67.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, 
   transparent 1px, transparent 12px), linear-gradient(90deg, #4f9693, #4f9693);
 }
+
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
@@ -244,6 +289,7 @@ body {
   -webkit-animation: grow-flower-tree 4s backwards;
           animation: grow-flower-tree 4s backwards;
 }
+
 .flower__line__leaf {
   --w: 7vmin;
   --h: calc(var(--w) + 2vmin);
@@ -353,213 +399,9 @@ body {
   transform-origin: bottom center;
   transform: rotate(-48deg) rotateY(40deg);
 }
-.flower__grass--1 {
-  -webkit-animation: moving-grass 2s linear infinite;
-          animation: moving-grass 2s linear infinite;
-}
-.flower__grass--2 {
-  left: 2vmin;
-  bottom: 10vmin;
-  transform: scale(0.5) rotate(75deg) rotateX(10deg) rotateY(-200deg);
-  opacity: 0.8;
-  z-index: 0;
-  -webkit-animation: moving-grass--2 1.5s linear infinite;
-          animation: moving-grass--2 1.5s linear infinite;
-}
-.flower__grass--top {
-  width: 7vmin;
-  height: 10vmin;
-  border-top-right-radius: 100%;
-  border-right: var(--line-w) solid var(--c);
-  transform-origin: bottom center;
-  transform: rotate(-2deg);
-}
-.flower__grass--bottom {
-  margin-top: -2px;
-  width: var(--line-w);
-  height: 25vmin;
-  background-image: linear-gradient(to top, transparent, var(--c));
-}
-.flower__grass__leaf {
-  --size: 10vmin;
-  position: absolute;
-  width: calc(var(--size) * 2.1);
-  height: var(--size);
-  border-top-left-radius: var(--size);
-  border-top-right-radius: var(--size);
-  background-image: linear-gradient(to top, transparent, transparent 30%, var(--c));
-  z-index: 100;
-}
-.flower__grass__leaf--1 {
-  top: -6%;
-  left: 30%;
-  --size: 6vmin;
-  transform: rotate(-20deg);
-  -webkit-animation: growing-grass-ans--1 2s 2.6s backwards;
-          animation: growing-grass-ans--1 2s 2.6s backwards;
-}
-@-webkit-keyframes growing-grass-ans--1 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-20deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--1 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--2 {
-  top: -5%;
-  left: -110%;
-  --size: 6vmin;
-  transform: rotate(10deg);
-  -webkit-animation: growing-grass-ans--2 2s 2.4s linear backwards;
-          animation: growing-grass-ans--2 2s 2.4s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--2 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--2 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__leaf--3 {
-  top: 5%;
-  left: 60%;
-  --size: 8vmin;
-  transform: rotate(-18deg) rotateX(-20deg);
-  -webkit-animation: growing-grass-ans--3 2s 2.2s linear backwards;
-          animation: growing-grass-ans--3 2s 2.2s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--3 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-18deg) rotateX(-20deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--3 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-18deg) rotateX(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--4 {
-  top: 6%;
-  left: -135%;
-  --size: 8vmin;
-  transform: rotate(2deg);
-  -webkit-animation: growing-grass-ans--4 2s 2s linear backwards;
-          animation: growing-grass-ans--4 2s 2s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--4 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(2deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--4 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(2deg) scale(0);
-  }
-}
-.flower__grass__leaf--5 {
-  top: 20%;
-  left: 60%;
-  --size: 10vmin;
-  transform: rotate(-24deg) rotateX(-20deg);
-  -webkit-animation: growing-grass-ans--5 2s 1.8s linear backwards;
-          animation: growing-grass-ans--5 2s 1.8s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--5 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-24deg) rotateX(-20deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--5 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-24deg) rotateX(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--6 {
-  top: 22%;
-  left: -180%;
-  --size: 10vmin;
-  transform: rotate(10deg);
-  -webkit-animation: growing-grass-ans--6 2s 1.6s linear backwards;
-          animation: growing-grass-ans--6 2s 1.6s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--6 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--6 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__leaf--7 {
-  top: 39%;
-  left: 70%;
-  --size: 10vmin;
-  transform: rotate(-10deg);
-  -webkit-animation: growing-grass-ans--7 2s 1.4s linear backwards;
-          animation: growing-grass-ans--7 2s 1.4s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--7 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-10deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--7 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-10deg) scale(0);
-  }
-}
-.flower__grass__leaf--8 {
-  top: 40%;
-  left: -215%;
-  --size: 11vmin;
-  transform: rotate(10deg);
-  -webkit-animation: growing-grass-ans--8 2s 1.2s linear backwards;
-          animation: growing-grass-ans--8 2s 1.2s linear backwards;
-}
-@-webkit-keyframes growing-grass-ans--8 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-@keyframes growing-grass-ans--8 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__overlay {
-  position: absolute;
-  top: -10%;
-  right: 0%;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  filter: blur(1.5vmin);
-  z-index: 100;
-}
+
+/*Pasto | Grass*/
+
 .flower__g-long {
   --w: 2vmin;
   --h: 6vmin;
@@ -1347,4 +1189,4 @@ body {
 .container * {
   -webkit-animation-play-state: paused !important;
           animation-play-state: paused !important;
-}/*# sourceMappingURL=main.css.map */
+}
