--- a/style/index.css
+++ b/style/index.css
@@ -67,7 +67,7 @@ body{
   width: 120px;
   height: 40px;
   margin: 50px auto;
-  background-color: #000;
+  background-color: #020d14;
   display: flex;
   align-items: center;
   color: white;
