--- a/style/index.css
+++ b/style/index.css
@@ -1,150 +1,154 @@
 /*Estilos generales de la página | General page styles*/
-body{
-  background-color: #051a26;
+body {
+    background-color: #051a26;
 }
 
 
 /*Estilos del contenedor principal | Main container styles*/
 .main_container {
-  position: relative;
-  text-align: center;
-  height: 50%;
-  width: 50%;
-  margin: 5% auto;
+    position: relative;
+    text-align: center;
+    height: 50%;
+    width: 50%;
+    margin: 5% auto;
 }
 
 
 /*Estilos del Texto HOLA | Styles of the text HOLA*/
-.text_hi{
-  font-size: 6rem;
-  font-weight: 900;
+.text_hi {
+    font-size: 6rem;
+    font-weight: 900;
 }
 
-.text_hi > span{
-  animation: glow 2.5s ease-in-out infinite;
+.text_hi>span {
+    animation: glow 2.5s ease-in-out infinite;
 }
 
-@keyframes glow{
-  0%, 100%{
-    color: #fff;
-    text-shadow: 0 0 12px #4f9693, 0 0 50px #4f9693, 0 0 100px #4f9693;
-  }
-  10%, 90%{
-    color: #447ca4;
-    text-shadow: none;
-  }
+@keyframes glow {
+
+    0%,
+    100% {
+        color: #fff;
+        text-shadow: 0 0 12px #4f9693, 0 0 50px #4f9693, 0 0 100px #4f9693;
+    }
+
+    10%,
+    90% {
+        color: #447ca4;
+        text-shadow: none;
+    }
 }
 
-.text_hi > .text_h{
-  animation-delay: .2s ;
+.text_hi>.text_h {
+    animation-delay: .2s;
 }
 
-.text_hi > .text_o{
-  animation-delay: .4s ;
+.text_hi>.text_o {
+    animation-delay: .4s;
 }
 
-.text_hi > .text_l{
-  animation-delay: .6s;
+.text_hi>.text_l {
+    animation-delay: .6s;
 }
 
-.text_hi > .text_a{
-  animation-delay: .8s;
+.text_hi>.text_a {
+    animation-delay: .8s;
 }
 
 
 /*Estilos del Texto | Styles of the text*/
-.text{
-  font-size: 2rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #c8f1eb;
+.text {
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #c8f1eb;
 }
 
 
 /*Estilos del Botón | Styles of the button*/
 .button {
-  position: relative;
-  width: 120px;
-  height: 40px;
-  margin: 50px auto;
-  background-color: #020d14;
-  display: flex;
-  align-items: center;
-  color: white;
-  flex-direction: column;
-  justify-content: center;
-  border: none;
-  padding: 12px;
-  gap: 12px;
-  border-radius: 8px;
-  cursor: pointer;
+    position: relative;
+    width: 120px;
+    height: 40px;
+    margin: 50px auto;
+    background-color: #020d14;
+    display: flex;
+    align-items: center;
+    color: white;
+    flex-direction: column;
+    justify-content: center;
+    border: none;
+    padding: 12px;
+    gap: 12px;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
 .button::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  left: -4px;
-  top: -1px;
-  margin: auto;
-  width: 128px;
-  height: 48px;
-  border-radius: 10px;
-  background: linear-gradient(-45deg, white 0%, #4f9693 100% );
-  z-index: -10;
-  pointer-events: none;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    content: '';
+    position: absolute;
+    inset: 0;
+    left: -4px;
+    top: -1px;
+    margin: auto;
+    width: 128px;
+    height: 48px;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, white 0%, #4f9693 100%);
+    z-index: -10;
+    pointer-events: none;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .button::after {
-  content: "";
-  z-index: -1;
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(-45deg, white 0%, #4f9693 100% );
-  transform: translate3d(0, 0, 0) scale(0.95);
-  filter: blur(20px);
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(-45deg, white 0%, #4f9693 100%);
+    transform: translate3d(0, 0, 0) scale(0.95);
+    filter: blur(20px);
 }
 
 .button:hover::after {
-  filter: blur(30px);
+    filter: blur(30px);
 }
 
 .button:hover::before {
-  transform: rotate(-180deg);
+    transform: rotate(-180deg);
 }
 
 .button:active::before {
-  scale: 0.7;
+    scale: 0.7;
 }
 
 
 /*Responsibo | Responsive*/
 
-@media screen and (max-width: 708px){
-  .main_container {
-    width: 100%;
-    margin: 25% auto;
-  }
-  
-  .text_hi{
-    font-size: 5rem;
-  }
-  
+@media screen and (max-width: 708px) {
+    .main_container {
+        width: 100%;
+        margin: 25% auto;
+    }
+
+    .text_hi {
+        font-size: 5rem;
+    }
+
 }
 
-@media screen and (max-width: 474px){
+@media screen and (max-width: 474px) {
 
-  .main_container {
-    width: 100%;
-    margin: 50% auto;
-  }
-  
-  .text_hi{
-    font-size: 3rem;
-  }
+    .main_container {
+        width: 100%;
+        margin: 50% auto;
+    }
 
-  .text{
-    font-size: 1rem;
-  }
+    .text_hi {
+        font-size: 3rem;
+    }
+
+    .text {
+        font-size: 1rem;
+    }
 }
